perf(div): remove a div

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "Portfólio",
-  "name": "Ewerton's Portfólio",
+  "name": "Ewerton's Portfolio",
   "icons": [
     {
       "src": "favicon.ico",
