--- a/package.json
+++ b/package.json
@@ -11,17 +11,21 @@
     "@types/node": "^20.3.1",
     "@types/react": "^18.2.12",
     "@types/react-dom": "^18.2.5",
+    "eslint": "^8.44.0",
+    "eslint-config-next": "^13.4.8",
+    "next": "^13.4.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "sass": "^1.63.6",
     "typescript": "^4.9.5",
     "web-vitals": "^3.3.2"
   },
   "scripts": {
-    "dev": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint",
     "commit": "cz",
     "sass": "sass --watch --style=compressed src/styles/sass/index.scss:src/styles/css/index.css"
   },
