--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "eslint": "^8.44.0",
     "eslint-config-next": "^13.4.8",
     "next": "^13.4.8",
+    "nodemailer": "^6.9.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
