--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,14 @@
       }
     ],
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/app/*"],
+      "@api/*": ["./src/app/api/*"],
+      "@Components/*": ["./src/app/Components/*"],
+      "@context/*": ["./src/app/context/*"],
+      "@hook/*": ["./src/app/hook/*"],
+      "@json/*": ["./src/app/json/*"],
+      "@models/*": ["./src/app/models/*"],
+      "@styles/*": ["./src/app/styles/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
