--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "nodemailer": "^6.9.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.49.3",
     "react-scripts": "5.0.1",
     "sass": "^1.63.6",
     "typescript": "^4.9.5",
